data/derived/fa15/progs/unify/prog1738.ml.out
Characters 94-113:
  |x when x>=10->((x/10),(x mod 10))@(multiHelper i t)
                 ^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
